--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Ruotian's HomePage"
-description              : 
+description              : ""
 repository               : "WrtTZ/WrtTZ.github.io"
 google_scholar_stats_use_cdn : true
 
