--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,14 +9,17 @@ main:
   - title: "Publications"
     url: "/#-publications"
 
-  - title: "Honors and Awards"
-    url: "/#-honors-and-awards"
+  #- title: "Honors and Awards"
+   # url: "/#-honors-and-awards"
 
   - title: "Educations"
     url: "/#-educations"
 
-  - title: "Invited Talks"
-    url: "/#-invited-talks"
+  #- title: "Invited Talks"
+  #  url: "/#-invited-talks"
 
+  - title: "Teaching"
+    url: "/#-Teaching"
+  
   - title: "Internships"
     url: "/#-internships"
