--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,7 +19,7 @@ main:
   #  url: "/#-invited-talks"
 
   - title: "Teaching"
-    url: "/#-Teaching"
+    url: "/#-teaching"
   
   - title: "Internships"
     url: "/#-internships"
